--- a/Presenters/Grpc/Grpc.csproj
+++ b/Presenters/Grpc/Grpc.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 	
   <ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
 	  <PackageReference Include="Microsoft.AspNetCore.Grpc.Swagger" Version="0.8.0" />
 	  <PackageReference Include="Google.Protobuf" Version="3.29.1" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.67.0" />
